--- a/DEV/clinic/authentication/templates/login.html
+++ b/DEV/clinic/authentication/templates/login.html
@@ -8,8 +8,8 @@
 <body>
     
     <form action="login" method="post">
-        {{ csrf_token }}
-        {{ form }}
+        {% csrf_token %}
+        {{ login_form }}
         <input type="submit" value="Entrar">
     </form>
 
