--- a/DEV/clinic/authentication/templates/login.html
+++ b/DEV/clinic/authentication/templates/login.html
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-    <form action="login" method="post">
-        {% csrf_token %}
-        {{ login_form }}
-        <input type="submit" value="Entrar">
-    </form>
+{% extends "base.html" %}
 
-</body>
-</html>
+{% block content %}
+
+<form method="post">
+    {% csrf_token %}
+    {{ login_form }}
+    <input type="submit" value="Entrar">
+</form>
+
+{% endblock %}
