--- a/DEV/clinic_frontend/src/index.css
+++ b/DEV/clinic_frontend/src/index.css
@@ -5,6 +5,16 @@ body {
         "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    width: 100svw;
+    height: 100svh;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
 }
 
 code {
